--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hookform/resolvers": "^5.0.1",
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
+    "class-variance-authority": "^0.7.1",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
