--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.76.1",
     "@tanstack/react-query-devtools": "^5.76.1",
     "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
