feat: [#5] svg를 react컴포넌트로 인식하기 위해 svg.d.ts 작성

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,19 +18,20 @@
         "name": "next"
       }
     ],
-    "baseUrl": "src/",
+    "baseUrl": ".",
     "paths": {
-      "@/apis/*": ["apis/*"],
-      "@/components/*": ["components/*"],
-      "@/constants/*": ["constants/*"],
-      "@/fonts/*": ["fonts/*"],
-      "@/hooks/*": ["hooks/*"],
-      "@/stores/*": ["stores/*"],
-      "@/stories/*": ["stories/*"],
-      "@/types/*": ["types/*"],
-      "@/utils/*": ["utils/*"]
+      "@/assets/*": ["src/assets/*"],
+      "@/apis/*": ["src/apis/*"],
+      "@/components/*": ["src/components/*"],
+      "@/constants/*": ["src/constants/*"],
+      "@/fonts/*": ["src/fonts/*"],
+      "@/hooks/*": ["src/hooks/*"],
+      "@/stores/*": ["src/stores/*"],
+      "@/stories/*": ["src/stories/*"],
+      "@/types/*": ["src/types/*"],
+      "@/utils/*": ["src/utils/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/types"],
   "exclude": ["node_modules"]
 }
