--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
     ],
     "baseUrl": ".",
     "paths": {
+      "public/assets/*": ["public/assets/*"],
       "@/assets/*": ["src/assets/*"],
       "@/apis/*": ["src/apis/*"],
       "@/components/*": ["src/components/*"],
