--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "@tanstack/react-query-devtools": "^5.76.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5",
