--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5",
+    "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.0",
     "zod": "^3.24.4",
     "zustand": "^5.0.4"
