--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.7.0",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.3",
     "react-toastify": "^11.0.5",
